--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,9 @@ input, button, select{
 
 .fizz{
     background-color: blueviolet;
+    border-radius: 20px;
+    width: 5rem;
+    margin-left: 45%;
 }
 
 .buzz{
@@ -50,5 +53,8 @@ input, button, select{
 
 .fizzbuzz{
     background-color: blueviolet;
+    border-radius: 20px;
+    width: 10rem;
+    margin-left: 40%;
     color: white;
 }
